fix(actor panel): make sure chat and header stay visible

--- a/client/src/pages/Host.css
+++ b/client/src/pages/Host.css
@@ -10,7 +10,7 @@
   display: grid;
 
   grid-template-columns: 1fr var(--sidebar-width);
-  grid-template-rows: var(--header-height) 1fr;
+  grid-template-rows: var(--header-height) calc(100vh - var(--header-height));
   height: 100vh;
 }
 
@@ -207,10 +207,11 @@
   width: 100%;
   border-left: 2px solid #404040;
 
-  display: flex;
-  flex-direction: column;
+  display: grid;
 
-  justify-content: space-between;
+  grid-template-rows: 120px 170px calc(
+      100vh - var(--header-height) - 170px - 120px
+    );
   align-items: center;
 
   padding: 10px 0;
@@ -263,4 +264,8 @@
   font-family: var(--desktop-font);
   border-top: 2px solid #404040;
   margin-bottom: 8px;
+
+  height: 100%;
+  display: grid;
+  grid-template-rows: 1fr 80px;
 }
